--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,15 @@
 @import url('https://fonts.google.com/share?selection.family=Edu+SA+Hand:wght@400..700|Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900');
+@import url('https://fonts.googleapis.com/css2?family=Aboreto&display=swap');
 @font-face {
   font-family: futura;
   src: url('../src/assets/font/Futura-Bold.ttf');
 }
-@font-face{
+
+@font-face {
   font-family: EduSAHand;
-  src:url('../src/assets/font/Edu_SA_Hand/EduSAHand-VariableFont_wght.ttf') format("truetype");
+  src: url('../src/assets/font/Edu_SA_Hand/EduSAHand-VariableFont_wght.ttf') format("truetype");
 }
+
 * {
   margin: 0;
   padding: 0;
@@ -17,18 +20,20 @@ html,
 body {
   height: 100%;
   width: 100%;
+  overflow-x: hidden;
 }
-:root{
-  --border-color:#fff5;
-  --w-image:500px;
-  --calculate:calc(3/2);
+
+:root {
+  --border-color: #fff5;
+  --w-image: 500px;
+  --calculate: calc(3/2);
 }
 
 /* index.css or App.css */
 
 #main {
   position: relative;
-  width: 100vw;
+  width: 100%;
   min-height: 100vh;
   overflow: hidden;
 }
@@ -58,7 +63,7 @@ body {
 /* Header start */
 .header {
   height: 13vh;
-  width: 100vw;
+  width: 100%;
   padding-top: 5.5vh;
   padding-left: 6vw;
   padding-right: 10vw;
@@ -96,7 +101,8 @@ body {
   list-style: none;
   font-size: 1.7rem;
   font-family: Georgia, 'Times New Roman', Times, serif;
-  font-weight: 550;color: white;
+  font-weight: 550;
+  color: white;
 
 }
 
@@ -106,45 +112,64 @@ body {
 
 
 .main-content {
-  display: flex;
-  width: 100vw;
-  min-height: auto;
-}
-
-.main-divide {
-  margin: 14rem 0rem 4rem 32rem;
+  display: flex-block;
+  width: 100%;
+  height:60vh;
+  align-items: center;
+  justify-items: center;
+  padding-top: 7%;
 }
 
 /* Fix this */
-.main-divide h4 {
+.main-content h4 {
   color: black;
-  padding-left: 2vw;
+  display:block;
   text-align: left;
-  font-weight:bolder;
-  font-size: 5.5rem;
+  font-weight: bolder;
+  font-size: 9.5rem;
+  padding-right: 190px;
   line-height: 7.2rem;
   font-family: 'EduSAHand';
 }
-#companyname {
-  color:rgb(153, 90, 8);      /* different color */
-  font-weight: 800;    /* bolder */
-  font-style:oblique; /* optional */
-  font-size: 7rem;     /* slightly bigger if needed */
-  letter-spacing: 1px; /* optional spacing */
+.main-bottom{
+  color:white;
+  margin-top: 5.5%;
 }
+#paragraph-home{
+align-items: center;
+justify-content: center;
+text-align: center;
+}
+#paragraph-home h3{
+  color:black;
+  font-size:3.5rem;
+   font-family:cursive;
+   padding-right: 12%;
+   margin-bottom: 2vh;
+}
+#paragraph-home p{
+  color:black;
+  padding-left: 16%;
+  padding-right: 30%;
+  font-size: 1.4rem;
+  line-height: 2rem;
+  font-weight: 600;
+}
+
+
 #productbutton {
-  margin-top: 6vh;
-  margin-left: 32.5%;
- max-width: 90%;
+ margin-top: 2%;
+  padding-right: 12%;
 }
 
 #productbutton button {
   min-width: 13vw;
   height: 6vh;
-  background-color: #393E46;
-   border-color:transparent;
-   border-radius: 7%;
-   justify-content: center;
+  background-color: #f59208;
+  border-color: transparent;
+  border-radius:2%;
+  justify-content: center;
+ 
 }
 
 #productbutton p {
@@ -156,51 +181,77 @@ body {
   text-align: center;
   align-items: center;
 }
+
 /* body end */
 /* choose us start*/
-.choose-main{
+.choose-main {
   width: 100vw;
   max-height: 160vh;
 }
-.choose-div{
+
+.choose-div {
   display: inline-flex;
   gap: 2%;
-  padding: 8vh 6vw 2vh 4vw;
+  padding: 8vh 6vw 2vh 5vw;
   max-width: fit-content;
   height: 100%;
   background-color: #E7FBE6;
 
 }
-.choose-left{
-flex: 1;
-font-size: 10rem;
-}
-.choose-right{
+
+.choose-left {
   flex: 1;
-  padding: 5.5vh 5vw 0vh 5vw;
-  
+  padding-top: 5%;
+
+
 }
-.choose-right p{
-  color: #A28B55;
-margin-bottom: 2.8%;
-font-size: 2.2rem;
-font-family:'EduSAHand';
+.head-choose{
+  font-size: 12.5rem;
+  background-color:#A28B55 ;
+  border: 5px solid #846722;;
+  margin-bottom: -14px;
+  padding: 5px;
+}
+
+.choose-right {
+  flex: 1;
+  padding: 5.5vh 5vw 0vh 7vw;
+
+}
+
+.choose-right h1{
+  color:#CA7842;
+  margin-bottom: 1px;
+  font-size:large;
+   font-size: 2rem;
+  font-family: 'EduSAHand';
   letter-spacing: 2px;
-  font-weight: 200;
+  font-weight: 900;
 }
+.choose-right p {
+  
+  color: #A28B55;
+  margin-bottom: 2.8%;
+  font-size: 1.7rem;
+  font-family: 'EduSAHand';
+  letter-spacing: 1.3px;
+  font-weight: 500;
+}
+
 /* /choose end*/
 /* benefits start */
 .benefits-div {
   width: 100%;
   height: 98vh;
   border-radius: 2%;
-  border: 45px solid #A28B55;
+  border: 5px solid #A28B55;
   display: flex;
   flex-direction: column;
   flex: 1;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: space-evenly;
   padding: 1% 5% 2% 5%;
+  background-color: #EDE8DC;
 }
 
 .benefits-left {
@@ -238,7 +289,6 @@ font-family:'EduSAHand';
   max-height: 100%;
   border-radius: 18% 38%;
   transition: transform 0.3s ease-out;
-  
 }
 
 
@@ -250,32 +300,38 @@ font-family:'EduSAHand';
 }
 
 /* choose us end */
-/* /product view  start*/
 
-.carousel{
-margin-top: -80px;
-width: 100vw;
-height: 100vh;
-overflow: hidden;
+/* /product view  start*/
+.main-content-caru {
+  background-color: rgb(133, 252, 129);
 }
-.carousel .list{
+.carousel {
+  margin-top: -0px;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+}
+
+.carousel .list {
   height: 100%;
   position: relative;
 }
-.carousel .list::before{
-  position:absolute;
+
+.carousel .list::before {
+  position: absolute;
   width: var(--w-image);
   height: 100%;
   content: '';
   top: 0;
-  left:calc(100% -calc(var(--w-image)*var(--calculate)));
+  left: calc(100% -calc(var(--w-image)*var(--calculate)));
   border-left: 1px solid var(--border-color);
   border-right: 1px solid var(--border-color);
-  z-index:10;
+  z-index: 10;
   pointer-events: none;
 }
-.carousel .list::after{
- position: absolute;
+
+.carousel .list::after {
+  position: absolute;
   top: 50px;
   left: 50px;
   content: '';
@@ -288,17 +344,224 @@ overflow: hidden;
   filter: blur(150px);
   opacity: .6;
 }
+
+.carousel .list .item {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.carousel .list .item .image {
+  width: var(--w-image);
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: calc(100% - calc(var(--w-image)*var(--calculate)));
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  align-items: center;
+  font-weight: 500;
+}
+
+.carousel .list .item .image img {
+  width: 110%;
+  margin-bottom: 120px;
+  height: 90%;
+  filter: drop-shadow(0 150px 50px #9e0c0c55);
+
+}
+
+.carousel .list .item .image figcaption {
+  font-family: 'EduSAHand';
+  font-weight: bold;
+  font-size: 1.3em;
+  text-align: right;
+  margin-bottom: 30px;
+  width: 70%;
+}
+.carousel .list .item .main-content-caru{
+  height: 100%;
+  display: grid;
+  grid-template-columns: calc(100%-calc(var(--w-image)*var(--calculate)));
+}
+.carousel .list .item .main-content-caru .content{
+padding: 150px 20px 20px 80px;
+}
+.carousel .list .item .main-content-caru .content h2{
+  font-size: 5em;
+  font-family: 'EduSAHand';
+}
+.carousel .list .item .main-content-caru .content .price{
+   font-size: 3em;
+  font-family: 'EduSAHand';
+  margin:20px 0;
+}
+.arrows{
+  position: absolute;
+  bottom: 20px;
+  width: calc(100%-calc(var(--w-image)*var(--calculate)));
+  display: grid;
+  grid-template-columns: repeat(2,50px);
+  grid-template-rows: 50px;
+  justify-content: end;
+  gap: 10px;
+}
+.arrows button{
+    background-color: transparent;
+    border: 1px solid var(--border-color);
+    color: #fff;
+    font-family: monospace;
+    font-size: large;
+    font-weight: bold;
+    line-height: 0;
+    box-shadow: 0 10px 40px #5555;
+    cursor: pointer;
+    transition: 0.5s;
+}
+.arrows button:hover{
+    background-color: #eee5;
+}
 .carousel .list .item{
-  postion:}
-.main-content-caru{
-  background-color: rgb(68, 144, 66);
+    display: none;
 }
-.main-content-caru2{
-    background-color: rgb(235, 209, 174);
+.carousel .list .item.active,
+.carousel .list .item.other_1,
+.carousel .list .item.other_2{
+    display: block;
+}
+.carousel .list .item.active{
+    z-index: 2;
+}
+.carousel .list .item.other_1,
+.carousel .list .item.other_2{
+    pointer-events: none;
+}
+.carousel .list .item.active .main-content{
+    animation: showContent 1s ease-in-out 1 forwards;
+}
+@keyframes showContent{
+    from{
+        clip-path: circle(0% at 70% 50%);
+    }to{
+        clip-path: circle(100% at 70% 50%);
+    }
+}
+.next .item.other_1{
+    z-index: 1;
+}
+.next .item .image img,
+.next .item .image figcaption{
+    animation: effectNext .5s ease-in-out 1 forwards;
+}
+@keyframes effectNext{
+    from{
+        transform: translateX(calc(var(--transform-from)));
+    }to{
+        transform: translateX(calc(var(--transform-from) - var(--w-image)));
+    }
+}
+.next .item.active .image{
+    --transform-from: var(--w-image);
+}
+.next .item.other_1 .image{
+    z-index: 3;
+    --transform-from: 0px;
+    overflow: hidden;
+}
+.next .item.other_2 .image{
+    z-index: 3;
+    --transform-from: calc(var(--w-image) * 2);
+}
+.arrows{
+    z-index: 10;
+}
+/* prev */
+.prev .list .item .image img,
+.prev .list .item .image figcaption{
+    animation: effectPrev 0.5s ease-in-out 1 forwards;
+}
+@keyframes effectPrev{
+    from{
+        transform: translateX(calc(var(--transform-from)));
+    }to{
+        transform: translateX(calc(var(--transform-from) + var(--w-image)));
+    }
+}
+.prev .list .item.active .image{
+    --transform-from: calc(var(--w-image) * -1);
+    overflow: hidden;
+}
+.prev .list .item.other_1 .image{
+    --transform-from: 0px;
+    z-index: 3;
+}
+.prev .list .item.other_2 .image{
+    z-index: 3;
+    --transform-from: var(--w-image);
+}
+.prev .list .item.other_2 .main-content{
+    opacity: 0;
+}
+@media screen and (max-width: 1023px){
+    :root{
+        --calculate: 1;
+        --w-image: 400px; 
+    }
+    .carousel .list .item .main-content .content h2{
+        font-size: 3em;
+    }
+}
+@media screen and (max-width: 767px){
+    .carousel .list .item .image{
+        width: 100%;
+        left: 0;
+        justify-content: center;
+    }
+    .carousel .list .item .image figcaption{
+        color: #fff;
+        width: 100%;
+        text-align: center;
+    }
+    .carousel .list .item .main-content .content{
+        display: none;
+    }
+    .arrows{
+        left: 50%;
+        justify-content: center;
+    }
+}
+
+/* partner with us start*/
+.patner{
+
+  padding: 2%;
+  width: 100vw;
+ min-height: 40vh;
+ background-color: #CA7842;
 
 }
-.main-content-caru3{
-    background-color: rgb(240, 153, 66);
-
+.patner-handshake{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1.4vw;
 }
-
+.patner-handshake img{
+  width: auto;
+  height: 10vh;
+}
+.patner h3{
+  font-size: 5rem;
+  font-family:Arial, Helvetica, sans-serif;
+}
+.patner p{
+  padding: 3%;
+  padding-top: 7vh;
+  padding-right: 24%;
+  font-size: 1.7rem;
+  font-family: cursive;
+}
+/* partner with us end */
